tests/baselines/reference/typeGuardOfFormThisMemberErrors(target=es2015).errors.txt
typeGuardOfFormThisMemberErrors.ts(4,3): error TS2564: Property 'isFSO' has no initializer and is not definitely assigned in the constructor.
typeGuardOfFormThisMemberErrors.ts(4,10): error TS1228: A type predicate is only allowed in return type position for functions and methods.
typeGuardOfFormThisMemberErrors.ts(5,17): error TS1228: A type predicate is only allowed in return type position for functions and methods.
typeGuardOfFormThisMemberErrors.ts(11,22): error TS1228: A type predicate is only allowed in return type position for functions and methods.
typeGuardOfFormThisMemberErrors.ts(14,3): error TS2564: Property 'isNetworked' has no initializer and is not definitely assigned in the constructor.
typeGuardOfFormThisMemberErrors.ts(14,16): error TS1228: A type predicate is only allowed in return type position for functions and methods.
typeGuardOfFormThisMemberErrors.ts(22,3): error TS2564: Property 'children' has no initializer and is not definitely assigned in the constructor.


==== typeGuardOfFormThisMemberErrors.ts (7 errors) ====
    // There's a 'File' class in the stdlib, wrap with a namespace to avoid collision
    namespace Test {
    	export class FileSystemObject {
    		isFSO: this is FileSystemObject;
    		~~~~~
!!! error TS2564: Property 'isFSO' has no initializer and is not definitely assigned in the constructor.
    		       ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.
    		get isFile(): this is File {
    		              ~~~~~~~~~~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.
    			return this instanceof File;
    		}
    		set isFile(param) {
    			// noop
    		}
    		get isDirectory(): this is Directory {
    		                   ~~~~~~~~~~~~~~~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.
    			return this instanceof Directory;
    		}
    		isNetworked: this is (Networked & this);
    		~~~~~~~~~~~
!!! error TS2564: Property 'isNetworked' has no initializer and is not definitely assigned in the constructor.
    		             ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.
    		constructor(public path: string) {}
    	}
    
    	export class File extends FileSystemObject {
    		constructor(path: string, public content: string) { super(path); }
    	}
    	export class Directory extends FileSystemObject {
    		children: FileSystemObject[];
    		~~~~~~~~
!!! error TS2564: Property 'children' has no initializer and is not definitely assigned in the constructor.
    	}
    	export interface Networked {
    		host: string;
    	}
    
    	let file: FileSystemObject = new File("foo/bar.txt", "foo");
    	file.isNetworked = file.isFile;
    	file.isFSO = file.isNetworked;
    	file.isFile = file.isFSO;
    }